--- a/final_project/templates/index.html
+++ b/final_project/templates/index.html
@@ -3,17 +3,19 @@
     <script src="./static/mywebscript.js"></script>
     <div class="card">
     <div class="card-body">
+        <form method="POST">
         <div class="mb-3">
             <label class="form-label">Text to be translated</label>
-            <input type="textarea" class="form-control" id="textToTranslate">
+            <input type="textarea" class="form-control" id="textToTranslate" name="text">
         </div>
     
         <div style="padding: 25px 25px 25px 25px;">
-            <button onclick="translateToFrench()" class="btn btn-secondary">Translate to French</button>        
-            <button onclick="translateToEnglish()" class="btn btn-secondary">Translate to English</button>        
+            <button onclick="englishToFrench()" class="btn btn-secondary">Translate to French</button>        
+            <button onclick="frenchToEnglish()" class="btn btn-secondary">Translate to English</button>        
         </div>
+        </form>
     
-        <div id="translated_text" style="padding: 25px 25px 25px 25px;"></div>
+        <div id="translated_text" style="padding: 25px 25px 25px 25px;">{{text2}}</div>
         </div>
   </div>
 </html>
